5개 포스트 시니어급 심화 (DB Index/Isolation, Java GC/Thread/Collections)
- db-index: B+Tree fanout, ICP, Covering Index, EXPLAIN 완전 분석 (827→1351줄)
- db-transaction-isolation: MVCC Read View 알고리즘, Gap Lock, SSI vs 락 비교 (615→1491줄)
- java-gc: ZGC Colored Pointer, G1 RemSet, Tri-Color Marking, 메모리 누수 탐지 (1110→1489줄)
- java-thread: Mark Word 에스컬레이션, MESI 프로토콜, AQS CLH 큐, Fork/Join (→1501줄)
- java-collections: HashMap Poisson 0.75, ConcurrentHashMap CounterCell, ArrayList amortized (1285→1435줄)

Co-Authored-By: Claude Opus 4.6 (1M context) <noreply@anthropic.com>